fix: blurred canvas output and margin

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -14,6 +14,7 @@
     border-color: green;
     border-top: 0.1rem solid #F8E9DD;
     margin-bottom: 3.2rem;
+    margin-top: 3.2rem;
 }
 
 .content {
