--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,11 @@ html {
   place-items: center;
   margin-top: 4rem;
 }
+
+canvas {
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-crisp-edges;
+  image-rendering: pixelated;
+  image-rendering: crisp-edges;
+  text-rendering: auto;
+}
