--- a/src/layout/graph/graph.module.css
+++ b/src/layout/graph/graph.module.css
@@ -1,7 +1,6 @@
 .container {
     width: inherit;
     height: 17.8rem;
-    margin-bottom: 3.2rem;
 }
 
 #graph_title {
@@ -12,4 +11,5 @@
     font-weight: 700;
     font-size: 3.2rem;
     line-height: 4.2rem;
+    margin-bottom: 3rem;
 }
